tdf#90255 FILESAVE:PPTX 'startAt' tag for bullet numbering is not exported

Problem Description :
XML Difference
Original :
<a:buAutoNum type="arabicPeriod" startAt="3"/>

Roundtrip :
<a:buAutoNum type="arabicPeriod"/>

Solution :
Added export support for 'startAt' tag of <a:buAutoNum> for pptx.

Change-Id: If86bce98e222795d851d4a5b3cbb65da5cee85fc
Reviewed-on: https://gerrit.libreoffice.org/15028
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: David Tardon <dtardon@redhat.com>
Tested-by: David Tardon <dtardon@redhat.com>